added current location and ability to delete workout and also reset button

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         </form>
       </ul>
 
+      <button class="btn">Reset</button>
       <p class="copyright">
         &copy; Copyright by
         <a
