--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
     <div class="sidebar">
       <img src="logo.png" alt="Logo" class="logo" />
 
+      <ul class="sorting">
+        <li class="sorting__item distance">Distance</li>
+        <li class="sorting__item duration">Duration</li>
+        <li class="sorting__item speed">Speed</li>
+        <!-- <li class="sorting__item">
+          <select class="form__input form__input--type">
+            <option value="running">Running</option>
+            <option value="cycling">Cycling</option>
+          </select> -->
+        </li>
+      </ul>
+
       <ul class="workouts">
         <form class="form hidden">
           <div class="form__row">
