ability to sort based on type, bug fixes and updated image

--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
     <div class="sidebar">
       <img src="logo.png" alt="Logo" class="logo" />
 
-      <ul class="sorting">
-        <li class="sorting__item distance">Distance</li>
-        <li class="sorting__item duration">Duration</li>
-        <li class="sorting__item speed">Speed</li>
+      <ul class="sorting"> 
+        <li class="sorting__item "><a href="#" class='sorting__link distance'>Distance</a></li>
+        <li class="sorting__item "><a href="#" class='sorting__link duration'>Duration</a></li>
+        <li class="sorting__item "><a href="#" class='sorting__link speed'>Speed</a></li>
+        <li class="sorting__item "><a href="#" class='sorting__link type'>Type</a></li>
         <!-- <li class="sorting__item">
           <select class="form__input form__input--type">
             <option value="running">Running</option>
